--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <div class="container">
         <div class="header">
             <div class="upperHeader">
-              <input type="text" name="search" placeholder="search . . . ">
+              <input type="text" id="search" name="search" placeholder="search . . . ">
 
               <div class="account">
                 <img src="Assets/notification.png" alt="">
